add javascript language overview

--- a/js/implement.html
+++ b/js/implement.html
@@ -8,10 +8,9 @@
     <body>
         <h1>Hello JavaScript</h1>
         <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br>
-            Corporis, voluptatem deleniti doloribus fugit quod aspernatur<br>
-            dignissimos at excepturi quis sit? Repellendus minima quaerat tenetur quae<br>
-            deserunt vitae reiciendis quas similique.
+            JavaScript (JS) is a versatile programming language primarily used for web 
+            development, enabling interactive and dynamic web pages, and also used in 
+            server-side applications, mobile development, and more.
         </p>
     </body>
 </html>
